--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import './app/strength-indicator/strength-indicator.component';
 
 .mat-card:not([class*=mat-elevation-z]) {
   @media screen and (min-width: 600px) {
