feat: replace chars with length #9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </form>
 
     <div class="gen-slider">
-      <label class="gen-slider-description">Characters: <strong>{{charSliderValue}}</strong></label>
+      <label class="gen-slider-description">Length: <strong>{{charSliderValue}}</strong></label>
       <mat-slider [(ngModel)]="charSliderValue" [min]="sliderMin" [max]="sliderMaxChar" class="gen-slider-tool"></mat-slider>
     </div>
 
