fix: make input readonly #17

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <mat-card-content>
     <form class="gen-form">
       <mat-form-field class="gen-form-field--full-width">
-        <input matInput [value]="generatedString" placeholder="Generated string" aria-label="Generated string">
+        <input matInput [value]="generatedString" readonly placeholder="Generated string" aria-label="Generated string">
       </mat-form-field>
     </form>
 
