feat: improve wording #18

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>Generate random string</mat-card-title>
+  <mat-card-title>Generate a random string</mat-card-title>
   <mat-card-content>
     <form class="gen-form">
       <mat-form-field class="gen-form-field--full-width">
